--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc -p .",
     "start": "ts-node ./src/index.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,10 +22,15 @@
   "homepage": "https://github.com/Nicram97/express-cloud-setup#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
+    "sqlite3": "^5.0.2",
     "ts-node": "^10.3.0",
+    "typeorm": "^0.2.38",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^16.11.0"
   }
 }
