--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -p .",
     "start": "ts-node ./src/index.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "saverepoinfo": "node-git-info"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,11 @@
   "homepage": "https://github.com/Nicram97/express-cloud-setup#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-actuator": "^1.8.0",
+    "express-promise-router": "^4.1.0",
     "fs-extra": "^10.0.0",
+    "node-git-info": "^1.1.0",
+    "prom-client": "^14.0.0",
     "sqlite3": "^5.0.2",
     "ts-node": "^10.3.0",
     "typeorm": "^0.2.38",
