--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "express-promise-router": "^4.1.0",
     "express-winston": "^4.2.0",
     "fs-extra": "^10.0.0",
+    "logform": "^2.3.0",
     "node-git-info": "^1.1.0",
     "prom-client": "^14.0.0",
     "sqlite3": "^5.0.2",
     "ts-node": "^10.3.0",
     "typeorm": "^0.2.38",
     "typescript": "^4.4.4",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-logstash-ts": "^0.2.3",
+    "winston-transport": "^4.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
