--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/Nicram97/express-cloud-setup#readme",
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.20.0",
+    "@types/swagger-jsdoc": "^6.0.1",
     "express": "^4.17.1",
     "express-actuator": "^1.8.0",
     "express-promise-router": "^4.1.0",
@@ -31,6 +33,8 @@
     "node-git-info": "^1.1.0",
     "prom-client": "^14.0.0",
     "sqlite3": "^5.0.2",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.3.0",
     "typeorm": "^0.2.38",
     "typescript": "^4.4.4",
