--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "homepage": "https://github.com/Nicram97/express-cloud-setup#readme",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.20.0",
+    "@types/js-yaml": "^4.0.4",
     "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "express": "^4.17.1",
     "express-actuator": "^1.8.0",
     "express-promise-router": "^4.1.0",
     "express-winston": "^4.2.0",
     "fs-extra": "^10.0.0",
+    "js-yaml": "^4.1.0",
     "logform": "^2.3.0",
     "node-git-info": "^1.1.0",
     "prom-client": "^14.0.0",
