--- a/config.yaml
+++ b/config.yaml
@@ -20,10 +20,10 @@ database:
   DB_MIGRATIONS: [./src/migrations/**/*.ts]
   DB_CLI: ./src/migrations
 
-# logstash:
-#   LOGSTASH_HOST: localhost
-#   LOGSTASH_PORT: 5000
-#   LOGSTASH_PROTOCOL: tcp
+logstash:
+  LOGSTASH_HOST: 192.168.49.2
+  LOGSTASH_PORT: 31354
+  LOGSTASH_PROTOCOL: tcp
 
 # sqlite:
 #   DB_DATABASE: test.db.sqlite3
