--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/js-yaml": "^4.0.4",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "axios": "^0.24.0",
     "express": "^4.17.1",
     "express-actuator": "^1.8.0",
     "express-promise-router": "^4.1.0",
