--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,18 @@
         "internalConsoleOptions": "openOnSessionStart",
         "skipFiles": ["<node_internals>/**", "node_modules/**"],
         "outputCapture": "std"
+      },
+      {
+        "type": "node",
+        "name": "E2E testing",
+        "request": "launch",
+        "args": ["--config", "./test/e2e/jest.config.ts", "--runInBand"],
+        "cwd": "${workspaceFolder}",
+        "console": "integratedTerminal",
+        "internalConsoleOptions": "neverOpen",
+        "disableOptimisticBPs": true,
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest",
+        "outputCapture": "std"
       }
     ]
   }
