--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "tsc -p .",
     "start": "ts-node ./src/index.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config ./test/unit/jest.config.ts",
+    "test:e2e": "jest --config ./test/e2e/jest.config.ts",
+    "test:contract": "jest --config ./test/contract/jest.config.ts",
+    "test:watch": "npm run test:e2e -- --watch",
+    "test:coverage": "npm run test -- --coverage",
     "saverepoinfo": "node-git-info"
   },
   "repository": {
@@ -41,6 +45,7 @@
     "sqlite3": "^5.0.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.3.0",
     "typeorm": "^0.2.38",
     "typescript": "^4.4.4",
@@ -51,6 +56,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^16.11.0"
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.0",
+    "jest": "^27.3.1"
   }
 }
