--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/Nicram97/express-cloud-setup#readme",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.20.0",
+    "@pact-foundation/pact": "^9.17.0",
     "@types/js-yaml": "^4.0.4",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
