--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,18 @@
         "disableOptimisticBPs": true,
         "program": "${workspaceFolder}/node_modules/jest/bin/jest",
         "outputCapture": "std"
+      },
+      {
+        "type": "node",
+        "name": "Contract testing",
+        "request": "launch",
+        "args": ["--config", "./test/contract/jest.config.ts", "--runInBand"],
+        "cwd": "${workspaceFolder}",
+        "console": "integratedTerminal",
+        "internalConsoleOptions": "neverOpen",
+        "disableOptimisticBPs": true,
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest",
+        "outputCapture": "std"
       }
     ]
   }
