fixed copying assets to build.

--- a/logstash.conf
+++ b/logstash.conf
@@ -1,16 +1,13 @@
 input {
   tcp {
-    port => "5044"
+    port => "5000"
     codec => "json"
   }
 }
  
 output {
   elasticsearch {
-    hosts => ["http://192.168.49.2:30122"]
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
-  }
-  stdout {
-    codec => rubydebug
+    hosts => ["http://localhost:9200"]
+    index => "logstash-%{+YYYY.MM.dd}"
   }
 }
