--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p .",
+    "prebuild": "rimraf dist",
+    "build": "npm run prebuild && tsc -p . && && cp -r ./config.yaml ./dist",
     "start": "ts-node ./src/index.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
     "test": "jest --config ./test/unit/jest.config.ts",
@@ -28,6 +29,7 @@
   "homepage": "https://github.com/Nicram97/express-cloud-setup#readme",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.20.0",
+    "@nestjs/schedule": "^1.0.2",
     "@pact-foundation/pact": "^9.17.0",
     "@types/js-yaml": "^4.0.4",
     "@types/swagger-jsdoc": "^6.0.1",
@@ -52,7 +54,7 @@
     "ts-node": "^10.3.0",
     "typeorm": "^0.2.38",
     "typescript": "^4.4.4",
-    "winston": "^3.3.3",
+    "winston": "^3.4.0",
     "winston-logstash-ts": "^0.2.3",
     "winston-transport": "^4.4.0"
   },
